--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ nav ul li {                     /* <li> die child is van <ul> die op zijn beurt 
 
 nav li a {
   display: block;
-  color: white;
+  color: rgb(35, 197, 246);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -110,7 +110,7 @@ nav li a:hover {
 }
 
 nav li a.active {
-  background-color: skyblue;
+  background-color:rgb(227, 0, 0);
 }
 
 
