--- a/style.css
+++ b/style.css
@@ -26,7 +26,8 @@
 
 html, body {                      /* geldt voor html en body */
   background-color: #b9e3ff;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
+  color: #303030;              /* tekstkleur donkergrijs */
+  background-image: linear-gradient(to right, rgb(177, 211, 255), rgb(0, 65, 163))
 }  
 
 div {                             /* geldt voor div */
@@ -145,3 +146,4 @@ nav li a.active {
 /* Indeling en opmaak voor subpagina */
 
 /* verzin deze zelf... */
+
