--- a/style.css
+++ b/style.css
@@ -168,6 +168,11 @@ nav li a.active {
   border-color:#b9e3ff;
   border-radius: 90px;
   border-style:solid;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:#b9e3ff;
+  font-size:xx-large;
+  text-align:center;
+
 
 }
 
@@ -180,6 +185,11 @@ min-height:350px;
 border-color:#b9e3ff;
 border-radius: 90px;
 border-style:solid;
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:#b9e3ff;
+  font-size:xx-large;
+  text-align:center;
+
 }
 
 .item-tekst4 {
@@ -192,6 +202,11 @@ border-style:solid;
   border-color:#b9e3ff;
   border-radius: 90px;
   border-style:solid;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  color:#b9e3ff;
+  font-size:xx-large;
+  text-align:center;
+
 }
 
 /************************* SUBPAGINA *************************/
