--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ main {
 h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
   margin: 10px 0px;
   text-align: center;             /* tekst centreren */
-  color: rgb(255, 255, 255);
+  color:#ffffff;
   font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
 } 
 
