--- a/style.css
+++ b/style.css
@@ -73,9 +73,10 @@ p {
 
 img {
   margin: 10px 0px;
-  width:225px;
+  width:220px;
   border-style: solid;
   border-color:#b9e3ff
+
   
 }
 
@@ -215,6 +216,20 @@ font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align:center;
 
 }
+
+#image-container {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  opacity: 0,2;
+  /* 20% opacity*/
+  background-size: cover;
+  background-position: center; 
+}
+
 
 /************************* SUBPAGINA *************************/
 
