--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
    let op 2: laat 1 sterretje voor { staan als je commentaar weghaalt */
 /*  * {border: 1px dotted black;}   */
   
+
+div {border: 2px dotted black;}
+
 /* zorg dat elke box een doorzichtige donkere achtergrond krijgt, 
    hoe meer boxen in elkaar hoe donkerder de achtergrondkleur 
    letop: laat 1 sterretje voor { staan als je commentaar weghaalt */
@@ -68,7 +71,7 @@ h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
 p {
   margin: 10px 525px;
   text-align: justify;            /* tekst links en rechts uitvullen */
-  border: 10px double #ffffff
+  border: 10px double #d50b0b
 }
 
 img {
@@ -94,7 +97,7 @@ a:hover {                         /* <a> als je er met de muis op staat */
   font-size: 0.7em;
 }
 
-#hoofdtitel {
+.hoofdtitel {
   font-size: 65px;
 }
 /************************* NAVIGATIEBALK *************************/
@@ -107,6 +110,7 @@ nav ul {                        /* <ul> die child is van <nav> */
   padding: 0;
   background-color:#ffffff;
   overflow: hidden;
+
 }
 
 nav ul li {                     /* <li> die child is van <ul> die op zijn beurt child is van <nav> */
@@ -156,8 +160,6 @@ nav li a.active {
   width: 275px;
   background-color:#ffffff;
   min-height:350px;
-  border-color:#b9e3ff;
-  border-radius: 90px;
   border-style:solid;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   color:#b9e3ff;
@@ -166,68 +168,18 @@ nav li a.active {
 
 }
 
-.item-tekst2 {
-  float: left;
-  margin-left: 400px;
-  margin-right: 10px;
-  width: 275px;
-  background-color:#ffffff;
-  min-height:350px;
-  border-color:#ffb9b9;
-  border-radius: 90px;
-  border-style:solid;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color:#b9e3ff;
-  font-size:xx-large;
-  text-align:center;
-
-
-}
-
-.item-tekst3 {
-float: right;
-width: 275px; 
-margin-right: 400px;
-background-color:#ffffff;
-min-height:350px; 
-border-color:rgb(255, 149, 0);
-border-radius: 90px;
-border-style:solid;
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color:#b9e3ff;
-  font-size:xx-large;
-  text-align:center;
-
-}
-
-.item-tekst4 {
-  margin-right: 50px;
-  margin-left: 130px;
-  float: right;
-  width: 275px; 
-  min-height:350px;  
-  background-color:#ffffff;
-  border-color: #ff89f9;
-  border-radius: 90px; 
-  border-style:solid;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color:#b9e3ff;
-  font-size:xx-large;
-  text-align:center;
-
-}
 
 #image-container {
   overflow: hidden;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
-  opacity: 0,2;
-  /* 20% opacity*/
+  opacity: 0,2%;
+  background-image: url()
   background-size: cover;
-  background-position: center; 
+  background-position: center;
 }
 
 
